css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: #000;
  font-family: 'Boldonse', sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

header {
  background-image: url('../img/ingredients.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 500px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.header-text h1,
.header-text p {
  color: #000;
  text-align: center;
}

.header-text h1 {
  font-size: 36px;
  margin-bottom: 8px;
}

.header-text p {
  font-size: 16px;
}

.header-text {
  align-content: center;
  background-color: rgba(251, 251, 251, 0.7);
  border-radius: 10px;
  width: 500px;
  height: 250px;
  margin: 0 20px;
  padding: 0 20px;
}

ul {
  list-style-type: none;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 3em;
  flex-wrap: wrap;
  padding: 50px 30px;
}

a {
  text-decoration: none;
  font-size: 20px;
  color: #f5f5f5;
}

/* holographic-card effects by Nefe Emadamerho-Atori https://prismic.io/blog/css-hover-effects */

.holographic-card {
  width: 300px;
  height: 200px;
  background: #111;
  align-content: center;
  position: relative;
  overflow: hidden;
  border-radius: 15px;
  transition: all 0.5s ease;
}

.holographic-card::before {
  content: '';
  position: absolute;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  background: linear-gradient(
    0deg,
    transparent,
    transparent 30%,
    rgba(207, 0, 15, 0.3)
  );
  transform: rotate(-45deg);
  transition: all 0.5s ease;
  opacity: 0;
}

.holographic-card:hover {
  transform: scale(1.05);
  box-shadow: 0 0 30px rgba(207, 0, 15, 0.8);
}

.holographic-card:hover::before {
  opacity: 1;
  transform: rotate(-45deg) translateY(100%);
}

footer {
  background: #111;
  color: #f5f5f5;
  text-align: center;
  align-content: center;
  height: 50px;
  font-size: 12px;
}

